[tool.poetry]
name = "citypulse-task"
version = "0.1.0"
description = ""
authors = ["KfirTayar <kfirtayar145@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.46.1"
pydeck = "^0.9.1"
geopandas = "^1.1.1"
shapely = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
